# orderbook-simulator

./: CMakeLists.txt  README.MD  README.md  main.cpp
.github/workflows/: build.yml
core_code/: engine.cpp  engine.h  order.h  orderbook.cpp  pricelevel.h
data_handling/: constants.h  logger.h  types.h
data_structures/: avltree.h  vector_object_pool.h
include/: CommandHandler.hpp  DataStore.hpp
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  CommandHandler.cpp  main.cpp
src/data/: CMakeLists.txt  DataStore.cpp
src/engine/: CMakeLists.txt
src/strategies/: CMakeLists.txt
tests/: CMakeLists.txt  dummy_test.cpp
